LIST OF CHANGES FOR NPG-QC PACKAGE

 - Removing global functions from manual_qc.js
 - Logic for preliminary outcomes for MQC
 - New undecided outcome for MQC
 - update scripts for genotype check data preparation (perlcritic issues and version strings)
 - gt_pack recognises version 02 headers in append mode

release 58.0
 - skip running legacy gcbias if window_depth not available
 - compile fastq_summ executable during the npg_qc build, skip
     compilation if samtools is not on the path
 - C code clean-up to remove warnings in compilation
 - SeqQC daemon to set CATALYST_HOME relative to bin so that
     the production user does not have to have this definition
 - SeqQC build optionally fetches javascript dependencies
 - added scripts to handle generation of data for autoqc genotype checks

release 57.12
 - Removing MQC logic from templates and moving it to JS
 - Adding a controller to provide MQC status for a run using REST
 - Adding a role to provide functionality for 401 responses
 - Validation for DWH->MQC outcome integrity during mqc for logged mqc-ing user
 - Fixing id-username data in test data to fix patches in controllers 
     which validate username

release 57.11
 - take into account old-style tag metrics results when deciding
     whether the lane has plexes
 - be compatible with latest changes to the db_connect role
 - ensure that tests do not access user's home directory

release 57.10
 - total_reads now returns 0 when num_total_reads is 0 rather than undef
 - add support for metrics files produced by bamstreamingmarkduplicates
 - npg_qc build for web server does not compile executables
 - functionality of the util package in SeqQC merged into the rpt_key autoqc role,
     the package removed
 - api::error package moved to Util::Error
 - using node-qunit-phantomjs to run headless tests
 - tests for basic functionality for mqc Javascript code
 - adding configuration for blanket
 - updating readme for changes in testing procedure

release 57.9